rs/macros/tests/ui/gservice_fails_export_duplicate_scale.stderr
error: `export` attribute cannot be parsed: duplicate `scale` flag in `#[export]`
 --> tests/ui/gservice_fails_export_duplicate_scale.rs:7:7
  |
7 |     #[export(scale, scale)]
  |       ^^^^^^
